Day 3 morning: eval harness, 20 happy-path + 5 edge cases, fix prov_002 eval, warm-tone rule, ignore eval_results_latest.json
Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ __pycache__/
 dist/
 build/
 
+# Eval harness output (regenerated each run)
+data/eval_results_latest.json
+
 # Pytest
 .pytest_cache/
 .coverage
