--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,9 @@ langchain-openai>=0.2.0
 langchain-anthropic>=0.2.0
 python-dotenv>=1.0.0
 
-# API & UI (MVP)
+# API (MVP)
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
-streamlit>=1.30.0
 
 # Testing (TDD)
 pytest>=8.0.0
